# DiscordBotInRust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: ping.rs
