[package]
name = "TestBot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = [
  "framework",
  "standard_framework",
  "http",
  "gateway",
  "rustls_backend"
]
